<resources>
    <string name="app_name">RiaCalc</string>

    <string name="text_description_inspection">Опис перевірки</string>

    <string name="text_inspection_car_dealership">Перевірка автосалону</string>

    <string name="text_inspection">Перевірка</string>
    <string name="text_btn_inspection">Перевірка</string>
    <string name="text_inspections">Перевірки:</string>

    <string name="text_trip">Поїздка</string>
    <string name="text_btn_trip">поїздка-витрата</string>
    <string name="text_trips">Поїздки:</string>

    <string name="text_other_expense">Інші витрати</string>
    <string name="text_btn_other">Бонуси</string>
    <string name="text_other_expenses">Інші витрати:</string>
    <string name="text_bonus_title">Опис бонуса</string>
    
    <string name="text_need_add_description">Потрібно додати опис</string>

    <string name="text_change_price">Змінити вартість</string>
    <string name="text_cost">Вартість</string>
    <string name="text_sum">Сума</string>
    <string name="text_cost_default_inspection">Вартість переврки</string>
    <string name="text_need_specify_cost">Вкажіть вартість</string>
    <string name="text_edit">Редагувати</string>
    <string name="text_delete">Видалити</string>
    <string name="text_currency">грн</string>
    <string name="text_hint_add_description">Додайте опис</string>

    <string name="text_setting_title_general">Налаштування програми</string>
    <string name="text_setting_title_export">Налаштування експорту </string>
    <string name="text_setting_price">Вартість  перевірки, грн</string>
    <string name="text_setting_show_price">Відображати вартість</string>
    <string name="text_setting_add_trips">Додавати поїздки</string>
    <string name="text_setting_add_other">Додавати інші витрати </string>
    <string name="text_no_description">(немає опису)</string>
    <string name="text_report_copied">Звіт скопійовано в буфер обміну!</string>

    <string name="text_btn_ok">ОК</string>
    <string name="text_btn_cancel">ВІДМІНА</string>
    <string name="text_0">0</string>

    <string name="template_inspections">\nРазом перевірок: %1$d</string>
    <string name="template_trips">\nВитрати на поїздки: %1$d грн</string>
    <string name="template_expenses">\nІнші витрати: %1$d грн</string>
    <string name="template_report_item">\n%1$s: Перевірки: %2$d </string>

    <string name="template_formatted_currency">%1$d грн</string>
    <string name="template_item_inspection">+%1$d  %2$s</string>
    <string name="template_item_expense">-%1$d  %2$s</string>
    <string name="template_date">%1$d %2$s</string>
    <string name="template_item_day_day">%1$d. %2$s</string>
    <string name="template_int_string">%1$d %2$s</string>
    <string name="template_plus">+%d</string>
    <string name="template_minus">-%d</string>
    <string name="tmp_day_month">день / місяць</string>
    <string name="tmp_date_year">число / рік</string>

    <string name="text_no_month_data">(За цей місяць немає даних)</string>
    <string name="text_cost_default_inspection_car_dealership">Вартість перевірки автосалону</string>
    <string name="text_car_dealership">Автосалон</string>
    <string name="text_car_park">Автомайданчик</string>
    <string name="text_const_progress">Хід будівництва</string>


    <string-array name="inspection_names">
        <item>Перевірка</item>
        <item>Автосалон</item>
        <item>Автомайданчик</item>
        <item>Хід будівництва</item>
    </string-array>
    
    <string-array name="spending_names">
        <item>Поїздка</item>
        <item>Інше</item>
    </string-array>

    <string-array name="day_name">
        <item>Неділя</item>
        <item>Понеділок</item>
        <item>Вівторок</item>
        <item>Середа</item>
        <item>Четвер</item>
        <item>П\'ятниця</item>
        <item>Субота</item>
    </string-array>

    <string-array name="month_name">
        <item>Cічня</item>
        <item>Лютого</item>
        <item>Березня</item>
        <item>Квітня</item>
        <item>Травня</item>
        <item>Червня</item>
        <item>Липня</item>
        <item>Серпня</item>
        <item>Вересня</item>
        <item>Жовтня</item>
        <item>Листопада</item>
        <item>Грудня</item>
    </string-array>

    <string-array name="month_name_for_picker">
        <item>Cічень</item>
        <item>Лютий</item>
        <item>Березень</item>
        <item>Квітень</item>
        <item>Травень</item>
        <item>Червень</item>
        <item>Липень</item>
        <item>Серпень</item>
        <item>Вересень</item>
        <item>Жовтень</item>
        <item>Листопад</item>
        <item>Грудень</item>
    </string-array>
</resources>