<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.setting.SettingFragment">

    <ImageButton
        android:id="@+id/btn_setting_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title_setting_general"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/text_setting_title_general"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting_back" />

    <TextView
        android:id="@+id/text_setting_price"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_setting_price"
        app:layout_constraintEnd_toStartOf="@+id/et_setting_input_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_setting_general" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_add_trips"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/text_setting_add_trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_setting_export" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_setting_input_price"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_setting_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_setting_price" />

    <TextView
        android:id="@+id/title_setting_export"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_setting_title_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_show_price" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_show_price"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/text_setting_show_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_setting_price" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_add_other_expenses"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/text_setting_add_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_add_trips" />


</androidx.constraintlayout.widget.ConstraintLayout>