<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.day.DayFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_day"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_constraint"
        tools:listitem="@layout/item_event"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_constraint"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_day"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_inspection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/text_btn_inspection"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_trip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/my_button"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_trip"
            style="@style/my_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_btn_trip"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_bonus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_add_inspection"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_bonus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/text_btn_other"
            style="@style/my_button"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/btn_add_trip"
            app:layout_constraintStart_toEndOf="@id/btn_add_inspection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>