<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/frame_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/btn_setting"
        app:layout_constraintBottom_toBottomOf="@+id/btn_setting"
        app:layout_constraintStart_toEndOf="@id/btn_setting"
        app:layout_constraintEnd_toStartOf="@id/btn_month_day"
        >
        <TextView
            android:id="@+id/text_date_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="день / місяць"
            style="@style/text_headline_h1"
            />
        <TextView
            android:id="@+id/text_date_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="число / рік"
            style="@style/text_normal"/>


    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_month_day"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:src="@drawable/ic_calendar_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageButton
        android:id="@+id/btn_export"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:src="@drawable/ic_upload"
        app:layout_constraintEnd_toStartOf="@+id/btn_month_day"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_inspections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/frame_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txt_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/text_inspections"
            style="@style/text_normal"
            />
        <TextView
            android:id="@+id/txt_reviews_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="99"
            style="@style/text_normal"
            />
        <TextView
            android:id="@+id/txt_reviews_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/template_formatted_currency"
            style="@style/text_normal"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_trips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/linear_inspections"
        >
        <TextView
            android:id="@+id/txt_trips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_trips"
            style="@style/text_normal"
            />
        <TextView
            android:id="@+id/txt_trips_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="9"
            style="@style/text_normal"
            />
        <TextView
            android:id="@+id/txt_trips_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/template_formatted_currency"
            style="@style/text_normal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_other"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_trips"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >
        <TextView
            android:id="@+id/txt_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/text_other_expenses"
            style="@style/text_normal"
            />
        <TextView
            android:id="@+id/txt_other_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="9"
            style="@style/text_normal"
            />
        <TextView
            android:id="@+id/txt_other_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/template_formatted_currency"
            style="@style/text_normal"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>